🦊 Firefox Extension Support - Complete Cross-Browser Implementation
📚 COMPREHENSIVE DOCUMENTATION:
✅ Created detailed extension architecture guide (docs/EXTENSION_ARCHITECTURE.md)
✅ Documented Chrome vs Firefox differences and compatibility
✅ Implementation timeline and success metrics
✅ Complete cross-browser development workflow

🔧 FIREFOX BUILD SYSTEM:
✅ Firefox-specific manifest (Manifest V2) with proper gecko settings
✅ Browser API polyfill for cross-browser compatibility (src/utils/browser-polyfill.ts)
✅ Separate webpack config for Firefox (webpack.firefox.config.js)
✅ Multi-browser package.json scripts (build:chrome, build:firefox, build:all)
✅ Enhanced create-downloadable script with browser-specific builds

🎯 FIREFOX COMPATIBILITY FIXES:
✅ Updated minimum Firefox version to 91.0 for better API support
✅ Added tabs permission for Firefox compatibility
✅ Fixed manifest formatting and structure
✅ Proper browser_specific_settings with gecko ID
✅ Background scripts instead of service workers
✅ browser_action instead of action (Manifest V2)

🚀 MULTI-BROWSER DISTRIBUTION:
✅ Separate build outputs: dist/ (Chrome) and dist-firefox/ (Firefox)
✅ Browser-specific download packages in /downloads/chrome/ and /downloads/firefox/
✅ Individual ZIP files: pagepouch-extension-chrome.zip and pagepouch-extension-firefox.zip
✅ Browser-specific installation guides and documentation
✅ Organized file structure for easy distribution

📦 BUILD COMMANDS:
✅ npm run build:chrome - Chrome Manifest V3 build
✅ npm run build:firefox - Firefox Manifest V2 build
✅ npm run build:all - Both browsers simultaneously
✅ npm run build:download:chrome - Chrome downloadable package
✅ npm run build:download:firefox - Firefox downloadable package
✅ npm run build:download:all - Both browser packages

🎉 PRODUCTION READY:
✅ Both Chrome and Firefox extensions compile successfully
✅ Proper manifest validation with web-ext tool
✅ Cross-browser API compatibility layer implemented
✅ Complete documentation and de

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -5,10 +5,17 @@
   "description": "PagePouch Browser Extension - Capture web content with one click",
   "scripts": {
     "dev": "webpack --config webpack.config.js --mode development --watch",
+    "dev:firefox": "webpack --config webpack.firefox.config.js --mode development --watch",
     "build": "webpack --config webpack.config.js --mode production",
+    "build:chrome": "webpack --config webpack.config.js --mode production",
+    "build:firefox": "webpack --config webpack.firefox.config.js --mode production",
+    "build:all": "npm run build:chrome && npm run build:firefox",
     "build:store": "node scripts/build-for-store.js",
     "build:download": "node scripts/create-downloadable.js",
-    "clean": "rm -rf dist build",
+    "build:download:chrome": "node scripts/create-downloadable.js chrome",
+    "build:download:firefox": "node scripts/create-downloadable.js firefox",
+    "build:download:all": "npm run build:download:chrome && npm run build:download:firefox",
+    "clean": "rm -rf dist dist-firefox build",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx"
   },
