--- a/apps/extension/downloads/firefox/pagepouch-extension-firefox-unpacked/manifest.json
+++ b/apps/extension/downloads/firefox/pagepouch-extension-firefox-unpacked/manifest.json
@@ -8,12 +8,13 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pagepouch@pagepouch.com",
-      "strict_min_version": "78.0"
+      "strict_min_version": "91.0"
     }
   },
   "permissions": [
     "activeTab",
     "storage",
+    "tabs",
     "https://*/*",
     "http://*/*"
   ],
@@ -53,5 +54,5 @@
   "web_accessible_resources": [
     "icons/*"
   ],
-  "content_security_policy": "script-src 'self'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
