--- a/apps/extension/manifest-firefox.json
+++ b/apps/extension/manifest-firefox.json
@@ -8,18 +8,19 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pagepouch@pagepouch.com",
-      "strict_min_version": "91.0"
+      "strict_min_version": "78.0"
     }
   },
   "permissions": [
     "activeTab",
     "storage",
-    "tabs",
     "https://*/*",
     "http://*/*"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
   "browser_action": {
@@ -40,11 +41,17 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": ["icons/*"],
+  "web_accessible_resources": [
+    "icons/*"
+  ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
