--- a/apps/extension/dist-firefox/manifest.json
+++ b/apps/extension/dist-firefox/manifest.json
@@ -46,5 +46,5 @@
     }
   ],
   "web_accessible_resources": ["icons/*"],
-  "content_security_policy": "script-src 'self' 'unsafe-eval' 'unsafe-inline'; object-src 'self'; style-src 'self' 'unsafe-inline'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
