--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.38.0",
     "autoprefixer": "^10.4.0",
@@ -28,6 +29,7 @@
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
