--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,17 +18,21 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-sigma/core": "^5.0.4",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.38.0",
     "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "graphology": "^0.26.0",
+    "graphology-layout-forceatlas2": "^0.10.1",
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sigma": "^3.0.2",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
