--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "sigma": "^3.0.2",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.0.0",
