🌐 Update to pagestash.app domain & add Vercel config
DOMAIN MIGRATION: pagestash.app
================================

✅ UPDATES:
- All manifest files: homepage_url → https://pagestash.app
- Extension IDs: pagestash@pagestash.app
- Support email: support@pagestash.app
- Created comprehensive DOMAIN_SETUP_GUIDE.md

✅ VERCEL CONFIGURATION:
- Added vercel.json with:
  - WWW redirect (www.pagestash.app → pagestash.app)
  - Security headers (X-Frame-Options, CSP, etc.)
  - Permanent 301 redirects

✅ FILES UPDATED:
- apps/extension/manifest.json
- apps/extension/manifest.firefox.json
- apps/extension/manifest-firefox.json
- apps/web/src/app/page.tsx (support email)
- docs/DOMAIN_SETUP_GUIDE.md (NEW)
- vercel.json (NEW)

📋 DEPLOYMENT STEPS:
1. Configure pagestash.app in Vercel Dashboard
2. Add DNS records in Namecheap:
   - A record: @ → 76.76.21.21
   - CNAME: www → cname.vercel-dns.com
3. Update Supabase redirect URLs
4. Update environment variables in Vercel

🚀 Ready for domain launch at pagestash.app!

This commit will trigger Vercel deployment with new domain config.

--- a/apps/extension/downloads/chrome/pagestash-extension-chrome-unpacked/manifest.json
+++ b/apps/extension/downloads/chrome/pagestash-extension-chrome-unpacked/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.2.0",
   "description": "Capture any webpage with one click. Perfect for researchers, analysts, and anyone who needs to archive web content reliably.",
   "author": "PageStash Team",
-  "homepage_url": "https://pagestash.com",
+  "homepage_url": "https://pagestash.app",
   "permissions": [
     "activeTab",
     "storage",
