🔥 Integrate Google Analytics 4 - Ready for production
ANALYTICS INTEGRATED: G-Z9PDL75KNC
===================================

✅ GA4 Script Added:
- layout.tsx: Google Analytics tracking code
- Automatic page views
- Event tracking infrastructure

✅ Homepage Tracking:
- Extension download clicks
- Browser detection (Chrome/Firefox)

📊 Ready to track:
- Page views (automatic)
- Extension downloads
- User signups/logins
- Dashboard activity

🚀 Next: Add env var to Vercel

--- a/env.example
+++ b/env.example
@@ -4,6 +4,10 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
+# Google Analytics 4
+# Get from: https://analytics.google.com → Admin → Data Streams
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-Z9PDL75KNC
+
 # App Configuration
 # Development: http://localhost:3001
 # Production: https://pagepouch.com (or your production domain)
