--- a/apps/web/public/extension/downloads/pagestash-extension-firefox-unpacked/manifest.json
+++ b/apps/web/public/extension/downloads/pagestash-extension-firefox-unpacked/manifest.json
@@ -1,19 +1,20 @@
 {
   "manifest_version": 2,
-  "name": "PagePouch",
-  "version": "1.1.0",
+  "name": "PageStash",
+  "version": "1.2.0",
   "description": "Capture any webpage with one click. Perfect for researchers, analysts, and anyone who needs to archive web content reliably.",
-  "author": "PagePouch Team",
-  "homepage_url": "https://pagepouch.com",
+  "author": "PageStash Team",
+  "homepage_url": "https://pagestash.app",
   "browser_specific_settings": {
     "gecko": {
-      "id": "pagepouch@pagepouch.com",
-      "strict_min_version": "78.0"
+      "id": "pagestash@pagestash.app",
+      "strict_min_version": "91.0"
     }
   },
   "permissions": [
     "activeTab",
     "storage",
+    "tabs",
     "https://*/*",
     "http://*/*"
   ],
@@ -25,7 +26,7 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_title": "PagePouch - Capture this page",
+    "default_title": "PageStash - Capture this page",
     "default_icon": {
       "16": "icons/icon-16.png",
       "32": "icons/icon-32.png",
@@ -53,5 +54,5 @@
   "web_accessible_resources": [
     "icons/*"
   ],
-  "content_security_policy": "script-src 'self'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
