--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "postcss": "^8.4.0",
+    "puppeteer": "^24.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
