--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-sigma/core": "^5.0.4",
+    "@sparticuz/chromium": "^141.0.0",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.38.0",
@@ -36,7 +37,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "postcss": "^8.4.0",
-    "puppeteer": "^24.27.0",
+    "puppeteer-core": "^24.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
