--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,11 +25,11 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-sigma/core": "^5.0.4",
-    "@sparticuz/chromium": "^141.0.0",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.38.0",
     "autoprefixer": "^10.4.0",
+    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "graphology": "^0.26.0",
@@ -37,7 +37,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "postcss": "^8.4.0",
-    "puppeteer-core": "^24.27.0",
+    "puppeteer-core": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
