--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.38.0",
     "autoprefixer": "^10.4.0",
+    "cheerio": "^1.1.2",
     "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
