--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-sigma/core": "^5.0.4",
+    "@sparticuz/chromium": "^141.0.0",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.38.0",
