Update pricing to $12/month and $120/year, reduce free tier to 10 clips/month
- Update all pricing references across web app (homepage, dashboard, auth, blog posts)
- Update subscription limits configuration (50 -> 10 clips for free tier)
- Update Stripe pricing config ($4 -> $12 monthly, $40 -> $120 annual)
- Update all UI components with new pricing
- Update database migration files with new limits
- Update extension popup components with new limits
- Fix Firefox extension manifest: add data_collection_permissions
- Fix extension icons: resize all icons to correct dimensions (were 2x too large)
- Add comprehensive extension store submission documentation
- Update SEO metadata with new pricing

--- a/apps/extension/manifest-firefox.json
+++ b/apps/extension/manifest-firefox.json
@@ -8,7 +8,11 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pagestash@pagestash.app",
-      "strict_min_version": "78.0"
+      "strict_min_version": "78.0",
+      "data_collection_permissions": {
+        "web_accessible": true,
+        "remote": true
+      }
     }
   },
   "permissions": [
