Fix Firefox Add-ons validation errors: data_collection_permissions and CSP
Critical fixes for Mozilla Add-ons submission:

1. Add 'required' property to data_collection_permissions
   - Mozilla requires explicit declaration: required: true
   - Resolves: data_collection_permissions must have required property 'required'

2. Remove 'unsafe-eval' from Content Security Policy
   - Changed: script-src 'self' 'unsafe-eval'
   - To: script-src 'self'
   - Eliminates security warnings about eval() usage
   - Safe to remove since we use DOMParser instead of innerHTML

3. Clean up package structure
   - Remove backup icon files from distribution
   - Remove nested ZIP files
   - Final package: 101KB, 12 files

This resolves all remaining Firefox Add-ons validation issues:
- ❌ ERROR: data_collection_permissions missing 'required' -> ✅ FIXED
- ⚠️  WARNING: CSP allows eval -> ✅ FIXED
- ⚠️  WARNING: CSP allows remote code execution -> ✅ FIXED

Extension is now fully compliant with Mozilla Add-ons requirements.

--- a/apps/extension/downloads/firefox/pagestash-extension-firefox-unpacked/manifest.json
+++ b/apps/extension/downloads/firefox/pagestash-extension-firefox-unpacked/manifest.json
@@ -11,7 +11,8 @@
       "strict_min_version": "91.0",
       "data_collection_permissions": {
         "web_accessible": true,
-        "remote": true
+        "remote": true,
+        "required": true
       }
     }
   },
@@ -23,9 +24,7 @@
     "http://*/*"
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ],
+    "scripts": ["background.js"],
     "persistent": false
   },
   "browser_action": {
@@ -46,17 +45,11 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content.js"
-      ],
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
       "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": [
-    "icons/*"
-  ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "web_accessible_resources": ["icons/*"],
+  "content_security_policy": "script-src 'self'; object-src 'self'"
 }
