Fix data_collection_permissions required property must be array
Final fix for Firefox Add-ons validation. Changed required from boolean true to empty array [].

--- a/apps/extension/dist-firefox/manifest.json
+++ b/apps/extension/dist-firefox/manifest.json
@@ -10,9 +10,7 @@
       "id": "pagestash@pagestash.app",
       "strict_min_version": "91.0",
       "data_collection_permissions": {
-        "web_accessible": true,
-        "remote": true,
-        "required": true
+        "required": []
       }
     }
   },
