--- a/apps/extension/manifest-firefox.json
+++ b/apps/extension/manifest-firefox.json
@@ -8,10 +8,7 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pagestash@pagestash.app",
-      "strict_min_version": "78.0",
-      "data_collection_permissions": {
-        "required": []
-      }
+      "strict_min_version": "78.0"
     }
   },
   "permissions": [
