Add proper data_collection_permissions with required array
Fixed Firefox Add-ons validation error. The data_collection_permissions property is REQUIRED and the required array must have at least 1 item.

Added appropriate data types for PageStash:
- webBrowsing: We capture web page content
- technicalAndInteraction: We track extension usage and interactions

This accurately declares what data the extension collects and is mandatory for Mozilla Add-ons submission.

--- a/apps/extension/dist-firefox/manifest.json
+++ b/apps/extension/dist-firefox/manifest.json
@@ -8,7 +8,10 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pagestash@pagestash.app",
-      "strict_min_version": "91.0"
+      "strict_min_version": "91.0",
+      "data_collection_permissions": {
+        "required": ["webBrowsing", "technicalAndInteraction"]
+      }
     }
   },
   "permissions": [
