Use correct Mozilla data_collection_permissions values
Fixed validation errors by using official values from Mozilla documentation:
- Required: websiteContent (PageStash captures web page content)
- Optional: technicalAndInteraction (usage metrics)

Reference: https://extensionworkshop.com/documentation/develop/firefox-builtin-data-consent/#specifying-data-types

These are the exact enum values required by Firefox Add-ons validation.

--- a/apps/extension/dist-firefox/manifest.json
+++ b/apps/extension/dist-firefox/manifest.json
@@ -10,7 +10,8 @@
       "id": "pagestash@pagestash.app",
       "strict_min_version": "91.0",
       "data_collection_permissions": {
-        "required": ["webBrowsing", "technicalAndInteraction"]
+        "required": ["websiteContent"],
+        "optional": ["technicalAndInteraction"]
       }
     }
   },
