--- a/apps/extension/downloads/firefox/pagestash-extension-firefox-unpacked/manifest.json
+++ b/apps/extension/downloads/firefox/pagestash-extension-firefox-unpacked/manifest.json
@@ -10,7 +10,8 @@
       "id": "pagestash@pagestash.app",
       "strict_min_version": "91.0",
       "data_collection_permissions": {
-        "required": ["webBrowsing", "technicalAndInteraction"]
+        "required": ["websiteContent"],
+        "optional": ["technicalAndInteraction"]
       }
     }
   },
