--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sigma": "^3.0.2",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.0.0",
