Fix: Full-page screenshot capture and stitching (v1.2.5)
- Fixed horizontal scroll detection threshold (10% -> 50%) to prevent unnecessary grid capture on responsive sites like Reddit
- Added device pixel ratio detection for proper canvas sizing on Retina displays
- Fixed screenshot stitching algorithm to properly calculate canvas dimensions and sequential positioning
- Removed horizontal capture for pages only slightly wider than viewport
- Updated Chrome extension to v1.2.5
- Updated Firefox extension to v1.2.5
- Updated web app download modal to v1.2.5
- Regenerated all downloadable extension packages

This fixes the screenshot stitching issues where captures were badly aligned, cut off, or showing incorrect width. Screenshots now properly capture full vertical content with clean stitching.

--- a/apps/extension/downloads/firefox/pagestash-extension-firefox-unpacked/manifest.json
+++ b/apps/extension/downloads/firefox/pagestash-extension-firefox-unpacked/manifest.json
@@ -10,8 +10,12 @@
       "id": "pagestash@pagestash.app",
       "strict_min_version": "91.0",
       "data_collection_permissions": {
-        "required": ["websiteContent"],
-        "optional": ["technicalAndInteraction"]
+        "required": [
+          "websiteContent"
+        ],
+        "optional": [
+          "technicalAndInteraction"
+        ]
       }
     }
   },
@@ -23,7 +27,9 @@
     "http://*/*"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
   "browser_action": {
@@ -44,11 +50,17 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": ["icons/*"],
+  "web_accessible_resources": [
+    "icons/*"
+  ],
   "content_security_policy": "script-src 'self'; object-src 'self'"
 }
